# tt_int

./: .gitignore  AUTHORS  CMakeLists.txt  COPILOT_SESSION_DUMP.md  DEVELOPMENT_PLAN.md  README.md  tt_int.code-workspace
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: calculator_demo.cpp
include/: distribution.h  expression.h  expression_builder.h  hello.h  monte_carlo_evaluator.h  variable_registry.h
src/: distribution.cpp  expression.cpp  expression_builder.cpp  hello.cpp  main.cpp  monte_carlo_evaluator.cpp  variable_registry.cpp
tests/: test_builder.cpp  test_distribution.cpp  test_expression.cpp  test_hello.cpp  test_integration.cpp  test_monte_carlo.cpp
